fix: aligns checkout button

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,10 @@
 body {
   font-family: 'Roboto', sans-serif;
   /* font-family: sans-serif; */
+  height: 100%;
+  min-height: 100%;
 }
+
 h1 {
   font-family: 'Courgette', cursive;
   margin: 0;
@@ -21,25 +24,17 @@ nav a {
   color: white;
 }
 
-form {
-  padding: 30px;
-}
-
 form div {
-  /* margin: 1em; */
+  margin: 1em;
   display: inline-block;
-  margin-bottom: 30px;
-}
-
-.form-button {
-  align-self: center;
 }
 
 .checkoutForm {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  padding: 30px;
+  margin: 20px;
 }
 
 .checkoutForm > input {
@@ -59,7 +54,7 @@ form div {
 .cards-container {
   justify-content: space-around;
   align-items: stretch;
-  flex: 1 0 100%;
+  /* flex: 1 0 100%; */
   /* flex-direction: row; */
 }
 
@@ -69,7 +64,10 @@ form div {
 
 .title-header {
   text-align: center;
-  background-color: #00a878;
+  background-color: #493843;
+  color: white;
+  /* background-color: #ef6461; */
+  /* background-color: #00a878; */
   /* background-color: #d5a021; */
   margin: 0;
   height: 100%;
@@ -78,15 +76,7 @@ form div {
 
 .container {
   background-color: #d8cfaf;
-}
-
-.card {
-  /* display: flex; */
-  flex: 0 0 25%;
-  margin: 5px;
-  align-items: center;
-  padding: 30px;
-  background-color: #493843;
+  height: 100%;
 }
 
 .card-contents {
@@ -95,7 +85,7 @@ form div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .single-product-container {
@@ -106,11 +96,19 @@ form div {
 
 .single-product-left {
   padding: 10px;
+  display: inline-block;
+  min-width: 200px;
 }
 .single-product-right {
   padding: 10px;
 }
 
-.checkout-container {
-  margin-top: 10px;
+.product-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#primary-buttons {
+  margin: 30px;
 }
